--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "version": "0.0.1",
   "license": "AGPL-3.0-only",
   "packageManager": "pnpm@8.15.2",
+  "engines": {
+    "npm": "please-use-pnpm",
+    "yarn": "please-use-pnpm"
+  },
   "scripts": {
     "extraScripts": "node scripts/syncGuides.js && node scripts/patches/defaultLanguage.js",
     "predev": "pnpm extraScripts",
